--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>Ci dispiace ma <%= htmlWebpackPlugin.options.title %> non funziona senza JavaScript. <a href="https://support.google.com/adsense/answer/12654?hl=it">Perfavore attivalo per continuare.</a> </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
